test/files/neg/t856.check
t856.scala:3: error: class ComplexRect needs to be abstract.
Missing implementations for 2 members. Stub implementations follow:
  // Members declared in scala.Equals
  def canEqual(that: Any): Boolean = ???

  // Members declared in scala.Product2
  def _2: Double = ???

class ComplexRect(val _1:Double, _2:Double) extends Complex {
      ^
1 error
